--- a/bsconfig.json
+++ b/bsconfig.json
@@ -17,7 +17,7 @@
   },
   "suffix": ".bs.js",
   "reason": { "react-jsx": 2 },
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["reason-react","bs-fetch","@glennsl/bs-json"],
   "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
     "error": "+101"
